--- a/src/Components/Index.css
+++ b/src/Components/Index.css
@@ -1,3 +1,13 @@
-body{
-    background-color: aqua;
+body {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+    background: #0F2027;
+    background: -webkit-linear-gradient(to right, #2C5364, #203A43, #0F2027);
+    background: linear-gradient(to right, #2C5364, #203A43, #0F2027);
+    color: white;
+    font-family: 'Roboto', sans-serif;
 }
